--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -23,7 +23,7 @@ jobs:
           extended: true
 
       - name: Build
-        run: hugo --minify
+        run: hugo --minify -v
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
