--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -22,6 +22,9 @@ jobs:
           hugo-version: 'latest'
           extended: true
 
+      - name: Clean public directory
+        run: rm -rf public
+
       - name: Build
         run: hugo --minify -v
 
