--- a/hugo.yaml
+++ b/hugo.yaml
@@ -190,7 +190,7 @@ markup:
   highlight:
     noClasses: false
     codeFences: true
-    guessSyntax: true
+    guessSyntax: false
     lineNoStart: 1
     lineNos: true
     lineNumbersInTable: true
